feat: nginx proxy pass

--- a/nextjs/Dockerfile
+++ b/nextjs/Dockerfile
@@ -1,8 +1,13 @@
-FROM node:18-alpine
+FROM node:18-slim
+
 WORKDIR /app
-COPY package.json yarn.lock ./
-RUN yarn
-COPY . .
+
+COPY package.json yarn.lock ./app/
+
+RUN yarn install --frozen-lockfile
+
+COPY . ./app
 
 EXPOSE 3000
+
 CMD yarn dev
