--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,18 @@
 version: '3.8'
 services:
   nextjs:
-    build: .
+    container_name: nextjs
+    build: ./nextjs
     ports:
       - 3000:3000
     volumes:
       - ./nextjs:/app
+
+  proxy:
+    container_name: proxy
+    build: ./proxy
+    restart: always
+    ports:
+      - 80:80
+    depends_on:
+      - nextjs
