feat: hot reload

--- a/proxy/nginx/default.conf
+++ b/proxy/nginx/default.conf
@@ -4,6 +4,13 @@ server {
   server_name _;
   server_tokens off;
 
+  proxy_set_header Upgrade $http_upgrade;
+  proxy_set_header Connection "upgrade";
+
+  location /_next/webpack_hmr {
+    proxy_pass http://nextjs:3000/_next/webpack-hmr;
+  }
+
   location / {
     proxy_pass http://nextjs:3000;
   }
