--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,18 @@
 version: '3.8'
 services:
-  nextjs:
-    container_name: nextjs
-    build: ./nextjs
+  frontend:
+    container_name: frontend
+    build: ./frontend
     ports:
       - 3000:3000
     volumes:
-      - ./nextjs:/app
+      - ./frontend:/app
 
   proxy:
     container_name: proxy
     build: ./proxy
     restart: always
+    entrypoint: ["sh", "-c", "/run.sh"]
     volumes:
       - proxy-dhparams:/var/proxy
       - ssl-certs:/etc/nginx/certs
@@ -19,7 +20,7 @@ services:
       - 80:80
       - 443:443
     depends_on:
-      - nextjs
+      - frontend
 
 volumes:
   proxy-dhparams:
