refactor: clean up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,10 @@ services:
     container_name: proxy
     build: ./proxy
     restart: always
-    entrypoint: ["sh", "-c", "/run.sh"]
     volumes:
       - proxy-dhparams:/var/proxy
       - ssl-certs:/etc/nginx/certs
+      - web:/var/www
     ports:
       - 80:80
       - 443:443
@@ -25,3 +25,4 @@ services:
 volumes:
   proxy-dhparams:
   ssl-certs:
+  web:
